test_cases/pass/p22.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x
x=6
IF ((x*3-8) > 9)
START IF
    PRINT: "yes"
END IF
ELSE
START IF
    PRINT: "no"
END IF
END SCRIPT
