test_cases/fail/f45.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x
x=5
IF (x=5)
START IF
    PRINT: "yes"
END IF
END SCRIPT
